[gd_scene load_steps=7 format=3 uid="uid://cieqo2p3d5xly"]

[ext_resource type="Script" uid="uid://45s2ql7e6fvy" path="res://Scenes/Main/parts/OS/Taskbar/parts/MediaPlayer/media_player.gd" id="1_bcpof"]
[ext_resource type="StyleBox" uid="uid://deoct5txhbuc8" path="res://Styles/OrangePanel.tres" id="1_wrna6"]
[ext_resource type="FontFile" uid="uid://dlia1t71max12" path="res://Fonts/PixelOperator.ttf" id="3_h8jx3"]
[ext_resource type="PackedScene" uid="uid://c5ld7n1ycuql2" path="res://UI/Buttons/IconBtn/IconBtn.tscn" id="5_dd8iw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wrna6"]

[sub_resource type="LabelSettings" id="LabelSettings_h8jx3"]
font = ExtResource("3_h8jx3")
font_color = Color(0, 0, 0, 1)
outline_color = Color(0.162066, 0.162066, 0.162066, 1)
shadow_size = 2
shadow_color = Color(0.129412, 0.129412, 0.129412, 0.345098)

[node name="MediaPlayer" type="PanelContainer"]
offset_left = 2.0
offset_top = 2.0
offset_right = 18.0
offset_bottom = 18.0
theme_override_styles/panel = ExtResource("1_wrna6")
script = ExtResource("1_bcpof")

[node name="AudioStreamPlayerMaster" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="AudioStreamPlayerReverb" type="AudioStreamPlayer" parent="."]
autoplay = true
bus = &"Reverb"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="PlayPauseBtn" parent="MarginContainer/HBoxContainer/HBoxContainer" instance=ExtResource("5_dd8iw")]
layout_mode = 2
icon = 9
active_color = Color(1, 1, 1, 1)
inactive_color = Color(0.127736, 0.127736, 0.127736, 1)
hint_title = "Hint"
hint_description = "Pause/Play music."

[node name="NextBtn" parent="MarginContainer/HBoxContainer/HBoxContainer" instance=ExtResource("5_dd8iw")]
layout_mode = 2
icon = 8
active_color = Color(1, 1, 1, 1)
inactive_color = Color(0.127736, 0.127736, 0.127736, 1)
hint_title = "Hint"
hint_description = "Next track."

[node name="TrackNameScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 15)
layout_mode = 2
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/TrackNameScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_wrna6")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/TrackNameScrollContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/TrackNameScrollContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TrackName" type="Label" parent="MarginContainer/HBoxContainer/TrackNameScrollContainer/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "TRACK NAME..."
label_settings = SubResource("LabelSettings_h8jx3")
vertical_alignment = 1
uppercase = true
